--- a/src/Components/HomePageComponent/HomePageComponent.scss
+++ b/src/Components/HomePageComponent/HomePageComponent.scss
@@ -29,7 +29,7 @@
       
 }
 .homepage_container1{
-    padding-inline: 20vw;
+    padding-inline: 22.5vw;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -42,7 +42,7 @@
 @media (max-width: 1620px) { 
     .homepage_container1
      {
-        padding-inline: 15vw;
+        padding-inline: 16.875vw;
         
         
     }
@@ -50,21 +50,21 @@
 @media (max-width: 1376px) { 
     .homepage_container1
      {
-        padding-inline: 7vw;
+        padding-inline: 7.875vw;
         
     }
 }
 @media (max-width: 1110px) { 
     .homepage_container1
      {
-        padding-inline: 5vw;
+        padding-inline: 5.625vw;
         
     }
 }
 @media (max-width: 600px) { 
     .homepage_container1
      {
-        padding-inline: 8vw;
+        padding-inline: 7vw;
         
     }
 }
@@ -217,18 +217,40 @@
 @media (max-width: 600px) { 
     .right_coloumn1
      {
-        height: 100%;
-        width: 480px;
+        height: 420px;
+        width: 420px;
         margin: auto;
+        margin-top: 30px;
+    }
+}  
+@media (max-width: 500px) { 
+    .right_coloumn1
+     {
+        height: 375px;
+        width: 400px;
+        margin: auto;
+        margin-top: 30px;
+
+    }
+}  
+@media (max-width: 440px) { 
+    .right_coloumn1
+     {
+        height: 100%;
+        width: 305px;
+        margin: auto;
+        margin-top: 20px;
+
     }
 }  
 
 
 .custom-image{
     height: 140px;
-    width: 140px;
+    width: 150px;
     text-align: center;
     display: flex;
+    border-radius: 5px;
     
 }
 
@@ -258,8 +280,8 @@
 @media (max-width: 600px) { 
     .custom-image
      {
-        height: 140px;
-        width: 140px;
+        height: 125px;
+        width: 125px;
         justify-content: center;
         
         
@@ -269,37 +291,205 @@
     .custom-image
      {
         height: 120px;
-        width: 120px;
+        width: 125px;
         justify-content: center;
         
         
         
     }
 }
-.status{
-    text-align: center;
-    font-size: 50px;
+@media (max-width: 440px) { 
+    .custom-image
+     {
+        height: 95px;
+        width: 95px;
+        justify-content: center;
+        
+        
+        
+    }
+}
+@media (max-width: 400px) { 
+    .custom-image
+     {
+        height: 90px;
+        width: 95px;
+        justify-content: center;
+        
+        
+        
+    }
+}
+.homepage_container2{
+    padding-inline: 22.5vw;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    margin:30px 0px 50px 0px;
+
+    // justify-content: space-between;
+    // display: grid;
+    // grid-template-columns: 1fr;
+   
+}
+@media (max-width: 1620px) { 
+    .homepage_container2
+     {
+        padding-inline: 16.875vw;
+        
+        
+    }
+}
+@media (max-width: 1376px) { 
+    .homepage_container2
+     {
+        padding-inline: 7.875vw;
+        
+    }
+}
+@media (max-width: 1110px) { 
+    .homepage_container2
+     {
+        padding-inline: 5.625vw;
+        
+    }
+}
+@media (max-width: 650px) { 
+    .homepage_container2
+     {
+        margin:10px 0px 40px 0px;
+        
+
+        
+    }
+}
+@media (max-width: 600px) { 
+    .homepage_container2
+     {
+        padding-inline: 8vw;
+        
+    }
 }
 
-// @media (max-width: 1383px) { 
-//     .custom-image
-//      {
+.left_coloumn2{
+    width: 55%;
+}
+@media (max-width: 600px) { 
+    .left_coloumn2
+     {
+        display: none;
+     }
+    }
+.right_column2{
+    width: 45%;
+    margin:0px 0px 0px 15px;
+
+}
+@media (max-width: 600px) { 
+    .right_column2
+     {
+        text-align: center;
+        width: 100%;
+        margin-top: 20px;
+    }
+}
+.custom-image2{
+        height: 400px;
+        width: 100%;
+
+        justify-content: center;
         
-//         height: 115px;
-//         width: 115px;
-//     }
-// }
-// @media (max-width: 1231px) { 
-//     .custom-image
-//      {
-//         height: 110px;
-//         width: 110px;
-//     }
-// }
-// @media (max-width: 1161px) { 
-//     .custom-image
-//      {
-//         height: 112px;
-//         width: 112px;
-//     }
-// }
+        border-radius: 5px;
+}
+.skill_heading{
+    font-size: 2.2em;
+    font-weight: bold;
+    color: var(--text-color);
+    width: 50%;
+    
+    
+}
+@media (max-width: 816px) { 
+    .skill_heading
+     {
+        font-size: 2em;
+        
+        
+    }
+}       
+ 
+
+
+@media (max-width: 600px) { 
+    .skill_heading
+     {
+        font-size: 2em;
+        width: 100%;
+        padding-inline: 5vw;
+        
+    }
+}
+@media (max-width: 500px) { 
+    .skill_heading
+     {
+        font-size: 1.5em;
+        
+        padding-inline: 0vw;
+        
+    }
+}
+.skill_container{
+    display: flex;
+    align-items: center;
+    margin: 10px 0px;
+    
+}
+@media (max-width: 600px) { 
+    .skill_container
+     {  
+        justify-content: center;
+        // padding-left: 30px;
+        width: 100%;
+       
+    }
+}
+@media (max-width: 500px) { 
+    .skill_container
+     {  
+       
+       margin: 5px 0px;
+       
+    }
+}
+
+
+@media (max-width: 600px) { 
+    .skill_item_container
+     {  
+        display: flex;
+        
+        flex-wrap: wrap;
+    }
+}
+@media (max-width: 500px) { 
+    .skill_item_container
+     {  
+        margin: 15px 0px;
+    }
+}
+
+.vertical_line {
+    border-left: .19em solid var(--primary-color) ; 
+    height: 1.3em; 
+    margin: 0 5px; 
+}
+.skill_item{
+    
+    font-size: 1.1em;
+     letter-spacing: 1px;
+}
+
+.signup{
+    margin-top: 20px;
+}
+
