--- a/src/Components/RecipeCardComponent/RecipeCardComponent.css
+++ b/src/Components/RecipeCardComponent/RecipeCardComponent.css
@@ -25,8 +25,8 @@
 .whole_container{
     
     color: red;
-    padding-inline: 20vw;
-    
+    padding-inline: 22.5vw;
+    margin-bottom: 50px;
 
     
 }
@@ -65,6 +65,7 @@
         
     }
 }
+
 .search_box_container{
     display: flex;
     align-items: center;
@@ -75,9 +76,8 @@
 }
 .search_box{
     height: 35px;
-    min-width: 300px;
+    max-width: 300px;
     padding: 10px;
-    border-radius: 20px 0 0 20px;
     outline: none;
     border: 1px solid #4d4d4d;
 }
@@ -120,8 +120,8 @@
 }
 @media (max-width:698px) {
     .recipe_card{
-        width: 260px;
-        height: 280px;
+        width: 270px;
+        height: 285px;
         
     }
     
@@ -133,7 +133,7 @@
 }
 @media (max-width:698px) {
     .recipe_image{
-        width: 260px;
+        width: 270px;
         height: 180px;
         
     }
