--- a/src/Components/SpecificRecipeComponent/SpecificRecipeComponent.css
+++ b/src/Components/SpecificRecipeComponent/SpecificRecipeComponent.css
@@ -26,7 +26,8 @@
 }
 
 .view_recipe_container{
-    padding-inline: 20vw;
+    padding-inline: 22.5vw;
+    
     
 }
 /* @media (max-width: 1500px) { 
@@ -53,14 +54,14 @@
 @media (max-width: 1620px) { 
     .view_recipe_container
      {
-        padding-inline: 15vw;
+        padding-inline: 16.875vw;
         
     }
 }
 @media (max-width: 1376px) { 
     .view_recipe_container
      {
-        padding-inline: 7vw;
+        padding-inline: 7.875vw;
         
     }
 }
@@ -108,6 +109,7 @@
 
 .view_name_description_container{
     flex-basis: 50%;
+    
 
 }
 @media (max-width: 1000px) { 
@@ -169,6 +171,7 @@
 .view_recipe_image{
     max-width: 100%; /* Ensures image doesn't exceed its container */
     height: auto;
+    border-radius: 5px;
 }
 @media (max-width: 1000px) { 
     .view_name_description_container
@@ -363,6 +366,7 @@
     width: 100%;
     letter-spacing: .094rem;
     margin-bottom: 10px;
+    margin-top: 20px;
     text-align: center;
     text-transform: uppercase;
     text-decoration: none;
