sidebar UI updated

--- a/src/Components/AddRecipesComponent/AddRecipesComponent.css
+++ b/src/Components/AddRecipesComponent/AddRecipesComponent.css
@@ -3,19 +3,27 @@
     --primary-color: rgb(255, 0, 86);
     --text-color: #0A0A0A;
   }
-  
+  *{
+    font-family: "Josefin Sans", sans-serif;
+  }
+  .add_recipe{
+    font-weight: bold;
+    padding: 15px 0px;
+  }
   body {
     background-color: var(--background-color);
     color: var(--text-color);
-    font-family: Arial, sans-serif;
+    
     margin: 0;
     padding: 0;
   }
   
   .container {
     max-width: 800px;
+    
     margin: 0 auto;
     padding: 20px;
+    font-family: "Josefin Sans", sans-serif;
   }
   
   h2 {
