Handeled. image upload

--- a/src/Components/NavbarComponent/NavbarComponent.scss
+++ b/src/Components/NavbarComponent/NavbarComponent.scss
@@ -70,6 +70,7 @@ a{
     .navbar
      {
         padding-inline: 2.25vw;
+        // box-shadow:  0 2px 3px var(--shadow-color);
         
     }
 }
