--- a/src/Components/AddRecipesComponent/AddRecipesComponent.css
+++ b/src/Components/AddRecipesComponent/AddRecipesComponent.css
@@ -85,4 +85,14 @@
       padding: 8px;
     }
   }
-  
+  .error-message{
+    color: red;
+    font-size: small;
+    
+  }
+  .nutrition_info{
+    padding: 0px 0px 15px;
+  }
+  .nutrition_info_calories{
+    padding: 15px 0px;
+  }
